--- a/src/main/resources/static/bower.json
+++ b/src/main/resources/static/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-ui-router": "^0.3.2"
+    "angular-ui-router": "^0.3.2",
+    "jquery": "^3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
