--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-security:1.4.0.RELEASE")
+	compile group: 'com.microsoft.azure', name: 'azure-storage', version: '4.4.0'
 
     compile 'io.jsonwebtoken:jjwt:0.6.0'
     
