--- a/src/main/resources/static/bower.json
+++ b/src/main/resources/static/bower.json
@@ -13,7 +13,8 @@
     "angular-ui-router": "^0.3.2",
     "jquery": "^3.1.1",
     "angular-tag-cloud": "^0.3.1",
-    "angular-datatables": "^0.5.5"
+    "angular-datatables": "^0.5.5",
+    "ng-notify": "^0.8.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
